Fix profile picture

--- a/_data/svbtle.yml
+++ b/_data/svbtle.yml
@@ -1,6 +1,7 @@
 ---
 subtitle: "cat /dev/life >> /dev/stdout"
 profile_url: http://about.me/mysqto
+profile_picture: http://www.gravatar.com/avatar/9298ed3e14aa62cbc070d7ae52f950c9.png
 profile_name: Chen Lei
 website_url: http://ilo.gs
 website_url_text: cat /dev/life >> /dev/stdout
