--- a/_data/svbtle.yml
+++ b/_data/svbtle.yml
@@ -11,7 +11,7 @@ website_title: cat /dev/life >> /dev/stdout
 email_with_subject: mailto:my@mysq.to?subject=[From%20Your%20Blog]
 twitter: mysqto
 feed_url: http://feeds.feedburner.com/hdily
-typekit_url: typekiturlhere
+typekit_url: //use.typekit.net/fih3wph.js
 ga_account: UA-35936455-1
 ga_domain: ilo.gs
 
