--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ production: false
 paginate: 10
 
 redcarpet:
-  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript"]
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "hard_wrap"]
